# docs/swagger.yaml
@@ -216,6 +216,60 @@ paths:
       summary: Get all songs with pagination
       tags:
       - Songs
+  /api/songs/filter:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve songs by applying filters and pagination.
+      parameters:
+      - description: Page number (default is 1)
+        in: query
+        name: page
+        type: integer
+      - description: Number of records per page (default is 20)
+        in: query
+        name: limit
+        type: integer
+      - description: Filter by group name (partial match)
+        in: query
+        name: group_name
+        type: string
+      - description: Filter by song name (partial match)
+        in: query
+        name: song_name
+        type: string
+      - description: 'Filter by release date (format: YYYY-MM-DD)'
+        in: query
+        name: release_date
+        type: string
+      - description: Filter by song text (partial match)
+        in: query
+        name: song_text
+        type: string
+      - description: Filter by link (partial match)
+        in: query
+        name: link
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Song'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get Songs with Filters
+      tags:
+      - Songs
   /ping:
     get:
       consumes:
