# internal/app/handler/song.go
@@ -7,6 +7,7 @@ import (
 	"log"
 	"net/http"
 	"strconv"
+	"time"
 )
 
 // CreateSong creates a new song
@@ -183,4 +184,69 @@ func (h *Handler) GetAllSongs(c *gin.Context) {
 	logger.InfoLogger.Println("songs :", songs)
 	c.JSON(http.StatusOK, gin.H{"status": "success", "data": songs})
 
+}
+
+// GetSongsWithFilter retrieves a list of songs with optional filters.
+// @Summary Get Songs with Filters
+// @Description Retrieve songs by applying filters and pagination.
+// @Tags Songs
+// @Accept json
+// @Produce json
+// @Param page query int false "Page number (default is 1)"
+// @Param limit query int false "Number of records per page (default is 20)"
+// @Param group_name query string false "Filter by group name (partial match)"
+// @Param song_name query string false "Filter by song name (partial match)"
+// @Param release_date query string false "Filter by release date (format: YYYY-MM-DD)"
+// @Param song_text query string false "Filter by song text (partial match)"
+// @Param link query string false "Filter by link (partial match)"
+// @Success 200 {object} []models.Song
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
+// @Router /api/songs/filter [get]
+func (h *Handler) GetSongsWithFilter(c *gin.Context) {
+	page, err := strconv.Atoi(c.DefaultQuery("page", "1"))
+	if err != nil || page < 1 {
+		logger.DebugLogger.Println(err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"status": "fail", "error": "Invalid page number"})
+		return
+	}
+
+	limit, err := strconv.Atoi(c.DefaultQuery("limit", "20"))
+	if err != nil || limit < 1 {
+		logger.DebugLogger.Println(err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"status": "fail", "error": "Invalid limit"})
+		return
+	}
+	logger.InfoLogger.Println("page %s and limit %s", page, limit)
+	offset := (page - 1) * limit
+
+	var filters struct {
+		Group       string    `form:"group_name"`
+		SongName    string    `form:"song_name"`
+		ReleaseDate time.Time `form:"release_date"`
+		SongText    string    `form:"song_text"`
+		Link        string    `form:"link"`
+	}
+
+	if err = c.ShouldBindQuery(&filters); err != nil {
+		logger.DebugLogger.Println(err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"status": "fail", "error": "Invalid query parameters"})
+		return
+	}
+	var requestBody models.RequestSong
+	requestBody.Group = filters.Group
+	requestBody.SongText = filters.SongText
+	requestBody.ReleaseDate = filters.ReleaseDate
+	requestBody.SongName = filters.SongName
+	requestBody.Link = filters.Link
+
+	songs, err := h.Service.GetSongsWithFilter(requestBody, limit, offset)
+	if err != nil {
+		logger.DebugLogger.Println(err.Error())
+		c.JSON(http.StatusInternalServerError, gin.H{"status": "fail", "error": "Could not fetch songs"})
+		return
+	}
+
+	logger.InfoLogger.Println("songs :", songs)
+	c.JSON(http.StatusOK, gin.H{"status": "success", "data": songs})
 }
